# phoenix-terminal

./: Cargo.toml  README.md
data/: devnet_markets.json  mainnet_markets.json
src/: main.rs  websocket.rs
