[package]
name = "project-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.14.5"
solana-sdk = "1.10.32"
ellipsis-client = "0.2.0"
solana-client = "1.10.32"
solana-account-decoder = "1.14.7"
solana-cli-config = "1.14.7"
phoenix-sdk = "0.5.1"
crossterm = "0.22.1"
serde = "1.0.197"
text_io = "0.1.12"
serde_json = "1.0.114"
anyhow = "1.0.81"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"]}
url = "2.5.0"
futures-util = "0.3.30"
phoenix-v1 = "0.2.4"
bytemuck = "1.13.0"
base64 = "0.22.0"
bs58 = "0.5.1"
chrono = "0.4.35"
multi-window-output = "0.1.4"
tui = { version = "0.16.0", features = ['crossterm'] }
